2017-01-04  Oliver Kiddle  <opk@zsh.org>

	* 40226: Src/Zle/computil.c, Test/Y03arguments.ztst:
	tidy up some of the _arguments set code

2017-01-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 40265: Src/pattern.c: fix continuing problems with Meta characters
	in pattern that resolves to a string by copying source string.
	Triggered by string that (correctly) turned Dash into '-'.

	* Paulo Andrade: 40260: Src/prompt.c: Set newly allocated
	space in prompt buffer to zero as it may be tested.

2017-01-01  Barton E. Schaefer  <schaefer@zsh.org>

	* users/22319: Src/subst.c: ${ary1:^ary2} should not change
	the isarr state of the expansion of ary1 unless ary1 is made
	from a scalar, lest semantics of (@) in double quotes be lost.

2016-12-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 40248: Src/hist.c: suppress errors from zshaddhistoryhook,
	and do not call it if no history entry will be written

2016-12-28  Sebastian Gniazdowski  <psprint@fastmail.com>

	* 40231: Src/params.c: Optimise setarrvalue().

2016-12-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40232: configure.ac: Remove SH_USE_BSD_ECHO autoconf test.

2016-12-27  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted (see users/22287): Completion/compinit: _comp_options
	needs to disable ERR_RETURN along with ERR_EXIT

2016-12-24  Barton E. Schaefer  <schaefer@zsh.org>

	* Oliver: 40118: Functions/Zle/bracketed-paste-magic: relocate
	BUFFER/CURSOR reset to work around "fc -p" issue (alternate fix
	replacing 40115).

	* unposted: Functions/Zle/bracketed-paste-magic: revert 40115,
	thus restoring 38579.

2016-12-22  Oliver Kiddle  <opk@zsh.org>

	* 40162: Src/Zle/computil.c, Test/Y03arguments.ztst: _arguments
	support for a match spec in combination with sets

2016-12-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Config/version.mk: Post-release version bump to
	5.3.1-dev-0.

2016-12-21  Peter Stephenson  <p.w.stephenson@ntlworld.com>
